// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scan Components - Snapshots > ScanContent - Snapshots > matches snapshot for default ScanContent 1`] = `
<div
  class="hidden md:flex"
  data-testid="container"
>
  <div
    data-testid="page-header"
  >
    <div
      data-size="large"
      data-testid="page-title"
    >
      Scan 
      <span
        class="text-brand"
      >
        QR Code.
      </span>
    </div>
    <div
      data-testid="page-subtitle"
    >
      Open Pubky Ring, create a pubky, and scan the QR.
    </div>
  </div>
  <div
    data-layout="column"
    data-testid="content-card"
  >
    <div
      class="items-center justify-center"
      data-testid="container"
    >
      <div
        class="flex h-[220px] w-[220px] items-center justify-center rounded-lg bg-foreground p-4"
      >
        <div
          class="items-center gap-2"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle h-8 w-8 animate-spin text-background"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
          <small
            class="text-background"
            data-size="sm"
            data-testid="typography"
          >
            Generating QR Code...
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanFooter - Snapshots > matches snapshot for default ScanFooter 1`] = `
<div
  data-testid="footer-links"
>
  Use
   
  <a
    data-testid="link"
    href="https://pubkyring.app/"
    target="_blank"
  >
    Pubky Ring
  </a>
   
  or any other
   
  <a
    data-testid="link"
    href="https://pubky.org"
    target="_blank"
  >
    Pubky Core
  </a>
  –powered keychain.
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for desktop ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <div
    data-size="large"
    data-testid="page-title"
  >
    Scan 
    <span
      class="text-brand"
    >
      QR Code.
    </span>
  </div>
  <div
    data-testid="page-subtitle"
  >
    Open Pubky Ring, create a pubky, and scan the QR.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for mobile ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <div
    data-size="large"
    data-testid="page-title"
  >
    Tap to 
    <span
      class="text-brand"
    >
      Authorize.
    </span>
  </div>
  <div
    data-testid="page-subtitle"
  >
    Open Pubky Ring, create a pubky, and scan the QR.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanNavigation - Snapshots > matches snapshot for default ScanNavigation 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
</div>
`;
